Add offline crypto dependencies and improve form UX